# OCR_Benchmark

./: .gitignore  README.md  pyproject.toml
benchmark_results/marker/scan/en/: scan_en_001_eval.json
docs/: OCR Benchmark.docx  Tai_lieu_benchmark_metrics_OCR.docx  table_scoring.md  web-user-guide.md
ground_truth/scan/en/: scan_en_001.json
ocr_benchmark/: __init__.py  normalize.py  runner.py
ocr_benchmark/eval/: __init__.py  scan.py  table.py  text_layer.py
ocr_benchmark/metrics/: __init__.py  cer.py  iou.py  pcs.py  teds.py  uet_metrics.py  wer.py
ocr_benchmark/ocr_model/: marker_convert.py  mistral_convert.py
raw/scan/en/mistral_output/: scan_en_001.md  scan_en_001_full_response.json  scan_en_001_table_prediction.json  scan_en_001_text_prediction.json
raw/scan/ja/mistral_output/: scan_ja_001.md  scan_ja_001_full_response.json  scan_ja_001_table_prediction.json  scan_ja_001_text_prediction.json  scan_ja_002.md  scan_ja_002_full_response.json  scan_ja_002_table_prediction.json  scan_ja_002_text_prediction.json  scan_ja_003.md  scan_ja_003_full_response.json  scan_ja_003_table_prediction.json  (+1 more)
scripts/: batch_reeval.py  rename_raw.py  reorganize_raw.py
tests/: test_marker_pipeline.py  test_metrics.py
uet/: Copy_of_datalab_convert_benchmark_uet.ipynb  Copy_of_mistral_ocr4_benchmark_uet.ipynb
webapp/: start.sh
webapp/backend/: chat_agent.py  config.py  gt_review.py  main.py  ocr_runner.py  upload_scorer.py
webapp/frontend/: index.html  package-lock.json  package.json
webapp/frontend/src/: App.tsx  index.css  types.ts
(+84 files in other folders)
