[project]
name = "ocr-benchmark"
version = "0.1.0"
description = "OCR Benchmark evaluation toolkit — CER, WER, nWER, TEDS, IoU, PCS"
requires-python = ">=3.10"
dependencies = [
    "editdistance==0.8.1",
    "jiwer==3.0.4",
    "beautifulsoup4==4.12.3",
    "lxml==5.2.2",
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.50.2",
    "python-multipart>=0.0.32",
    "aiofiles>=25.1.0",
    "pypdf2>=3.0.1",
    "requests>=2.34.2",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.5",
    "markdown-it-py>=4.2.0",
    "apted>=1.0.3",
    "scipy>=1.15.3",
    "httpx>=0.28.1",
    "pillow>=11.0.0",
]

[project.scripts]
ocr-benchmark = "ocr_benchmark.runner:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ocr_benchmark"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
